php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #45557 libxml visibility problem
Submitted: 2008-07-18 18:33 UTC Modified: 2008-07-22 10:31 UTC
From: Fedora at FamilleCollet dot com Assigned:
Status: Closed Package: DOM XML related
PHP Version: 5.3CVS-2008-07-18 (snap) OS: Linux (Fedora 9)
Private report: No CVE-ID: None
 [2008-07-18 18:33 UTC] Fedora at FamilleCollet dot com
Description:
------------
After successful compilation xml extension doesn't load



Reproduce code:
---------------
php -v

Expected result:
----------------
PHP 5.3.0-dev (cli) (built: Jul 18 2008 20:20:22) 
Copyright (c) 1997-2008 The PHP Group
Zend Engine v2.3.0, Copyright (c) 1998-2008 Zend Technologies


Actual result:
--------------
# php -v
PHP Warning:  PHP Startup: Unable to load dynamic library '/usr/lib64/php/modules/dom.so' - /usr/lib64/php/modules/dom.so: undefined symbol: php_libxml_node_free_resource in Unknown on line 0
PHP Warning:  PHP Startup: Unable to load dynamic library '/usr/lib64/php/modules/xmlreader.so' - /usr/lib64/php/modules/xmlreader.so: undefined symbol: dom_node_class_entry in Unknown on line 0
PHP Warning:  PHP Startup: Unable to load dynamic library '/usr/lib64/php/modules/xsl.so' - /usr/lib64/php/modules/xsl.so: undefined symbol: dom_node_class_entry in Unknown on line 0
PHP 5.3.0-dev (cli) (built: Jul 18 2008 20:20:22) 
Copyright (c) 1997-2008 The PHP Group
Zend Engine v2.3.0, Copyright (c) 1998-2008 Zend Technologies


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-07-18 18:38 UTC] Fedora at FamilleCollet dot com
Simple patch proposal witch solves this issue :

http://remi.fedorapeople.org/php-5.3.0-visibility.patch

Regards
 [2008-07-22 10:31 UTC] rrichards@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 00:00:02 2026 UTC